--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/node": "^18.7.18",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -19,7 +17,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
-    "typescript": "^4.6.4",
+    "dotenv": "^16.0.2",
     "vite": "^3.1.0"
   }
 }
