--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scroll": "^1.8.7",
+    "react-spinners": "^0.13.6",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5"
   },
